fix: vercel configuration for php

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "/(.*)",
+      "src": "**/*.php",
       "use": "@vercel/php"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
     }
   ]
 }
