--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "**/*.php",
-      "use": "@vercel-community/php@latest"
+      "use": "@juicyfx/vercel-php"
     }
   ]
 }
