--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "**/*.php",
-      "use": "vercel-php@latest"
+      "src": "/**",
+      "use": "@vercel/php"
     }
   ]
 }
